--- a/scss/settings/_fonts.scss
+++ b/scss/settings/_fonts.scss
@@ -1,2 +1,2 @@
-$open-sans: 'Open Sans', sans-serif;
-$raleway: 'Raleway', sans-serif;
+$font-open-sans: 'Open Sans', sans-serif;
+$font-raleway: 'Raleway', sans-serif;
