--- a/scss/elements/_base.scss
+++ b/scss/elements/_base.scss
@@ -6,19 +6,26 @@ html{
   font-size: 62.5%;
 }
 
+a{
+  text-decoration: none;
+}
+
 body{
-  background-color: $white;
-  color: $black;
-  font-family: $open-sans;
+  background-color: $color-white;
+  color: $color-black;
+  font-family: $font-open-sans;
 }
 
 .container {
   width: 1352px;
-  display: flex;
-  align-items: center;
-  padding: 0 136px;
+  margin: 0 auto;
 
-  @include mobile {
-    width: 375px;
+  @include tablet{
+    width: 100vw;
+  }
+
+  @include mobile{
+    width: 100vw;
+    padding: 0 0;
   }
 }
