--- a/scss/sections/_stat.scss
+++ b/scss/sections/_stat.scss
@@ -1,18 +1,17 @@
 .stat{
-  padding: 100px;
+  margin-top: 100px;
 
   @include mobile{
-    padding: 50px 36px;
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
   }
 
   &__title{
-    font-family: $raleway;
+    font-family: $font-raleway;
     font-weight: 400;
     font-size: 3.6rem;
-    color: $black;
     text-align: center;
 
     @include mobile{
@@ -21,92 +20,98 @@
   }
 
   &__main{
+    max-width: 800px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 0 180px;
+    margin: 100px auto 120px;
 
     @include mobile{
-      display: flex;
       flex-direction: column;
       justify-content: space-between;
-      padding: 0 28px;
+      margin: 35px auto 50px;
     }
   }
 
   &__box{
+    max-width: 160px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
-    padding-top: 100px ;
-    max-height: 16.8rem;
-    position: relative;
+    text-align: center;
+    font-family: $font-raleway;
+    //padding-top: 100px ;
+    //max-height: 16.8rem;
 
     @include mobile{
-      padding-top: 28px;
+      margin-bottom: 28px;
+
+      &:nth-child(3){
+      margin-bottom: 0;
+    }
     }
   }
 
   &__circle{
-    width: 6.271rem;
-    height: 6.271rem;
+    width: 63px;
+    height: 63px;
     border-radius: 50%;
-    z-index: -1;
-    position: absolute;
-  }
-
-  .circle{
-
-    &--red{
-      background-color: $red-cicle;
-      top: 97px;
-      right: 35px;
-
-      @include mobile{
-        top: 24px;
-        right: 35px;
-      }
-    }
-
-    &--blue{
-      background-color: $blue-btn;
-      top: 85px;
-      right: 80px;
-
-      @include mobile{
-        top: 11px;
-        right: 83px;
-      }
-    }
-
-    &--green{
-      background-color: $green-btn;
-      top: 95px;
-      right: 60px;
-
-      @include mobile{
-        top: 20px;
-        right: 64px;
-      }
-    }
+    //z-index: -1;
+    position: relative;
   }
 
   &__numbers{
-    color: $black;
-    font-family: $raleway;
+    font-family: $font-raleway;
     font-size: 2.0rem;
-    font-weight: 900;
-    padding-top: 23px;
+    font-weight: 800;
+    letter-spacing: 0.6rem;
+    margin-top: 13px;
   }
 
   &__description{
-    color: $gray;
-    font-family: $raleway;
+    color: $color-gray;
+    font-family: $font-raleway;
     font-size: 1.7rem;
     text-align: center;
     margin-top: 19px;
   }
+
+}
+.img{
+  position: absolute;
+
+  &__person{
+    top: 0;
+    right: -8px;
+  }
+
+  &__eye{
+    top: 14px;
+    right: -24px;
+  }
+
+  &__catalog{
+    top: 6px;
+    right: -18px;
+  }
+
 }
 
+.circle{
+  position: relative;
+
+  &--red{
+    background-color: $red-circle;
+  }
+
+  &--blue {
+    background-color: $blue-btn;
+  }
+
+
+  &--green{
+    background-color: $green-btn;
+  }
+}
 
