--- a/scss/settings/_mixins.scss
+++ b/scss/settings/_mixins.scss
@@ -4,8 +4,16 @@
 }
 }
 
-@mixin firstBreakpoint{
-  @media screen and (max-width: 1270px){
+@mixin tablet{
+  @media screen and (max-width: 1024px){
     @content;
   }
 }
+
+@mixin notebook{
+  @media screen and (max-width: 1352px){
+    @content;
+  }
+}
+
+
