--- a/css/main.css
+++ b/css/main.css
@@ -449,10 +449,6 @@ html {
   font-size: 62.5%;
 }
 
-a {
-  text-decoration: none;
-}
-
 body {
   background-color: white;
   color: black;
@@ -463,16 +459,14 @@ body {
   width: 1352px;
   margin: 0 auto;
 }
-@media screen and (max-width: 1024px) {
-  .container {
-    width: 100vw;
-  }
-}
 @media screen and (max-width: 375px) {
   .container {
-    width: 100vw;
     padding: 0 0;
   }
+}
+
+a {
+  text-decoration: none;
 }
 
 .btn {
@@ -1436,5 +1430,155 @@ body {
 }
 .footer__icons a:first-of-type {
   margin-right: 20px;
+}
+
+.calc {
+  padding: 80px 0;
+  background-color: #f7f7f7;
+}
+@media screen and (max-width: 1024px) {
+  .calc {
+    padding: 30px 15px;
+  }
+}
+.calc h2 {
+  font-size: 3.6rem;
+  font-family: "Raleway", sans-serif;
+  text-align: center;
+}
+.calc__columns {
+  max-width: 865px;
+  margin: 50px auto 0;
+  display: flex;
+}
+@media screen and (max-width: 1024px) {
+  .calc__columns {
+    display: block;
+  }
+}
+.calc__form {
+  width: 50%;
+  margin-right: 20px;
+}
+@media screen and (max-width: 1024px) {
+  .calc__form {
+    width: 100%;
+    margin-right: 0;
+  }
+}
+.calc__input input, .calc__select .select__input {
+  color: #a5a5a5;
+  width: 100%;
+  border-radius: 6px;
+  border: 1px solid #08a6e4;
+  padding: 11px 20px;
+  line-height: 1em;
+  font-size: 0.8125rem;
+  box-shadow: 0 3px 6px rgba(8, 166, 228, 0.16);
+  margin-bottom: 20px;
+  background-color: white;
+}
+.calc__input input::-moz-placeholder {
+  color: #a5a5a5;
+}
+.calc__input input:-ms-input-placeholder {
+  color: #a5a5a5;
+}
+.calc__input input::placeholder {
+  color: #a5a5a5;
+}
+.calc__select {
+  position: relative;
+}
+.calc__select .select__input {
+  position: relative;
+  height: 40px;
+  vertical-align: middle;
+  padding: 13px 20px;
+  cursor: pointer;
+}
+.calc__select .select__input::after {
+  content: "";
+  background-image: url("../assets/Arrow Down.svg");
+  width: 22px;
+  height: 22px;
+  display: block;
+  position: absolute;
+  right: 14px;
+  top: 9px;
+}
+.calc__select .select__dropdown {
+  display: none;
+  position: absolute;
+  z-index: 1;
+  background-color: white;
+  width: 100%;
+  border-radius: 6px;
+  border: 1px solid #eb476e;
+  overflow: hidden;
+}
+.calc__select .select__dropdown li {
+  font-size: 13px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+.calc__select .select__dropdown li:hover {
+  background-color: #a5a5a5;
+}
+.calc__select.open .select__input::after {
+  transform: rotate(180deg);
+}
+.calc__select.open .select__dropdown {
+  display: block;
+}
+.calc .form__checkbox .consent__text {
+  padding-top: 4px;
+}
+.calc__summary {
+  width: 50%;
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (max-width: 1024px) {
+  .calc__summary {
+    width: 100%;
+    margin-left: 0;
+    margin-top: 30px;
+  }
+}
+.calc__summary .summary__total,
+.calc__summary .list__item {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
+  border-radius: 6px;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  font-size: 0.875rem;
+  display: none;
+}
+.calc__summary .summary__total.open,
+.calc__summary .list__item.open {
+  display: flex;
+}
+.calc__summary .summary__total {
+  width: 50%;
+  align-self: flex-end;
+  margin-top: 22px;
+  padding: 8px 20px;
+  background-color: #08a6e4;
+}
+.calc__summary .summary__total .total__price {
+  font-size: 1.25rem;
+  font-weight: 700;
+}
+.calc__summary .list__item {
+  padding: 6px 20px;
+  background-color: #55dfb4;
+  margin-bottom: 8px;
+}
+.calc__summary .list__item .item__price {
+  font-weight: 700;
+  font-size: 1.125rem;
 }
 /*# sourceMappingURL=main.css.map */
