--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,3 +15,4 @@
 @import "scss/sections/pricing";
 @import "scss/sections/form";
 @import "scss/sections/footer";
+@import "scss/sections/calculator";
