--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -1,15 +1,20 @@
 .footer{
-  padding: 20px 0;
+  margin-top: 59px;
   box-shadow: 0 -5px 40px $gray-shadow;
+
+  @include mobile {
+    margin-top: 44px;
+  }
 
   &__container{
     height: 89px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 46px;
   }
 
-  &__info{
+  &__company{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -23,18 +28,17 @@
     color: $color-blue;
   }
 
-  &__copyright{
+  &__icons{
+    
+    img:first-of-type{
+      margin-right: 20px;
+    }
+  }
+
+  .copyright{
     font-size: 1.1rem;
     line-height: 1.5rem;
     color: $color-gray;
-    margin-top: 6px;
-  }
-
-  &__icons{
-    
-    a:first-of-type{
-      margin-right: 20px;
-    }
   }
 }
 
