--- a/scss/sections/_calculator.scss
+++ b/scss/sections/_calculator.scss
@@ -32,7 +32,6 @@
       }
     }
   
-  
     &__input input,
     &__select .select__input {
       color: $color-gray;
@@ -51,6 +50,7 @@
       input {
         &::placeholder {
           color: $color-gray;
+          font-size: 1.3rem;
         }
       }
     }
@@ -111,8 +111,15 @@
     }
   
     .form__checkbox {
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      margin-bottom: 27px;
+
       .consent__text {
         padding-top: 4px;
+        font-size: 1.2rem;
+        color: rgba(112, 112, 112, 1);
       }
     }
   
@@ -140,6 +147,9 @@
   
         &.open {
           display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          align-items: center;
         }
       }
   
@@ -157,6 +167,7 @@
       }
   
       .list__item {
+        font-size: 1.4rem;
         padding: 6px 20px;
         background-color: $green-btn;
         margin-bottom: 8px;
