--- a/css/main.css
+++ b/css/main.css
@@ -740,6 +740,7 @@ a {
   align-items: center;
   text-align: center;
   font-family: "Raleway", sans-serif;
+  position: relative;
 }
 @media screen and (max-width: 375px) {
   .stat__box {
@@ -753,7 +754,6 @@ a {
   width: 63px;
   height: 63px;
   border-radius: 50%;
-  position: relative;
 }
 .stat__numbers {
   font-family: "Raleway", sans-serif;
@@ -775,15 +775,15 @@ a {
 }
 .img__person {
   top: 0;
-  right: -8px;
+  right: 16px;
 }
 .img__eye {
   top: 14px;
-  right: -24px;
+  right: 26px;
 }
 .img__catalog {
   top: 6px;
-  right: -18px;
+  right: 24px;
 }
 
 .circle {
@@ -810,10 +810,15 @@ a {
 }
 .benefits__container {
   padding: 0 100px;
+  display: flex;
 }
 @media screen and (max-width: 1024px) {
   .benefits__container {
     padding: 0 15px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
   }
 }
 .benefits__box {
@@ -891,8 +896,7 @@ a {
 }
 @media screen and (max-width: 1024px) {
   .benefits .description--third--row {
-    width: 320px;
-    margin: 0 auto;
+    margin-bottom: 20px;
   }
 }
 .benefits__title {
@@ -993,7 +997,7 @@ a {
   display: block;
   transform: rotate(45deg);
   position: absolute;
-  top: 20px;
+  top: 166px;
   right: 20px;
 }
 @media screen and (max-width: 1024px) {
@@ -1009,7 +1013,8 @@ a {
   width: 320px;
   height: 320px;
   border-radius: 50%;
-  top: -27px;
+  position: absolute;
+  top: 108px;
   left: 8px;
 }
 @media screen and (max-width: 1024px) {
@@ -1030,9 +1035,9 @@ a {
 }
 @media screen and (max-width: 1024px) {
   .benefits .background--trumpet {
-    margin: 0 auto;
-    width: calc(100vw - 30px);
+    width: calc(100vw - 332px);
     height: 195px;
+    margin-left: 0;
   }
 }
 
@@ -1222,6 +1227,10 @@ a {
     justify-content: space-between;
   }
 }
+.contact-icon {
+  width: 30px;
+  height: 30px;
+}
 .contact__title {
   font-family: "Raleway", sans-serif;
   font-size: 4.9rem;
@@ -1234,6 +1243,9 @@ a {
     line-height: 4.7rem;
     margin-bottom: 5px;
   }
+}
+.contact__text {
+  margin-bottom: 22px;
 }
 .contact__instruction {
   font-size: 1.6rem;
@@ -1288,6 +1300,7 @@ a {
   font-size: 1.2rem;
   line-height: 1.7rem;
   margin-left: 10px;
+  margin-bottom: 20px;
 }
 @media screen and (max-width: 1024px) {
   .contact .checkbox p {
