--- a/scss/sections/_benefits.scss
+++ b/scss/sections/_benefits.scss
@@ -8,9 +8,14 @@
 
   &__container{
     padding: 0 100px;
+    display: flex;
 
     @include tablet{
       padding: 0 15px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 50px;
     }
   }
 
@@ -95,8 +100,7 @@
       padding: 50px 35px;
 
       @include tablet{
-        width: 320px;
-        margin: 0 auto;
+        margin-bottom: 20px;
       }
     }
   }
@@ -211,7 +215,7 @@
       display: block;
       transform: rotate(45deg);
       position: absolute;
-      top: 20px;
+      top: 166px;
       right: 20px;
 
       @include tablet{
@@ -227,7 +231,8 @@
       width: 320px;
       height: 320px;
       border-radius: 50%;
-      top: -27px;
+      position: absolute;
+      top: 108px;
       left: 8px;
 
       @include tablet{
@@ -247,9 +252,9 @@
       position: relative;
 
       @include tablet{
-        margin: 0 auto;
-        width: calc(100vw - 30px);
+        width: calc(100vw - 332px);
         height: 195px;
+        margin-left: 0;
       }
     }
   }
