--- a/scss/sections/_stat.scss
+++ b/scss/sections/_stat.scss
@@ -41,6 +41,7 @@
     align-items: center;
     text-align: center;
     font-family: $font-raleway;
+    position: relative;
     //padding-top: 100px ;
     //max-height: 16.8rem;
 
@@ -58,7 +59,7 @@
     height: 63px;
     border-radius: 50%;
     //z-index: -1;
-    position: relative;
+    //position: relative;
   }
 
   &__numbers{
@@ -83,17 +84,17 @@
 
   &__person{
     top: 0;
-    right: -8px;
+    right: 16px;
   }
 
   &__eye{
     top: 14px;
-    right: -24px;
+    right: 26px;
   }
 
   &__catalog{
     top: 6px;
-    right: -18px;
+    right: 24px;
   }
 
 }
